# cg_lab1

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  cg_lab1.pro  filter.cpp  filter.h  main.cpp
images/: mathMorphologyKernel
